# polars_proc_compare

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
benchmarks/: benchmark_compare (Copy).py  benchmark_compare.py
examples/: comparison_example (Copy).ipynb  comparison_example.ipynb  demo.py  missing_values_demo.ipynb
examples/.ipynb_checkpoints/: comparison_example-checkpoint.ipynb  demo-checkpoint.py
polars_proc_compare/: __init__.py  comparison_engine.py  data_generator (Copy).py  data_generator.py  results.py
profiling/: profile_benchmark.py
tests/: test_comparison.py  test_large_datasets.py
tests/utils/: test_data_gen.py
