[tool.poetry]
name = "polars-proc-compare"
version = "0.1.0"
description = "A Python implementation of SAS PROC COMPARE using Polars"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
polars = "^0.19.0"
jinja2 = "^3.1.2"
jupyterlab = "^4.0.0"
numpy = "^1.24.0"
pandas = "^2.1.0"
pyarrow = "^14.0.0"
line-profiler = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
